5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1595_1017.log
== TEST (2019-03-26 17:40:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2)

-- ERROR:
File "XXXX", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:40:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2)

-- EXECUTION TIME:
0.131312
-- ERROR:
  File "/home/codebench/codes/1595/1017/main.py", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:40:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:40:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- EXECUTION TIME:
0.201339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 10, in <module>
    d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:40:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:41:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:41:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de t2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- EXECUTION TIME:
0.165999
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/1017/main.py", line 10, in <module>
    d= (R*arcos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:47:45) 
-- CODE:

from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de T2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:47:48) 
-- CODE:

from math import*
t1= radians(float(input("Latitude de P1: ")))
g1= radians(float(input("Longitude de G1: ")))
t2= radians(float(input("Latitude de T2: ")))
g2= radians(float(input("Longitude de G2: ")))
R= 6371.01
d= (R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)))
print(round(d, 2))

-- EXECUTION TIME:
0.227671
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
